# anilist-mal-sync

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  anilist-mal-sync.xml  ca_profile.xml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/anilist_mal_sync/: cli.py  config.py  constants.py
